--- a/Shuzzle/app/src/main/res/layout/gallery_recycler_item.xml
+++ b/Shuzzle/app/src/main/res/layout/gallery_recycler_item.xml
@@ -10,6 +10,10 @@
         android:id="@+id/gallery_image"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@android:color/black"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
