[Add/Fix] Progressbar, extra category, popup bug, api calls

--- a/Shuzzle/app/src/main/res/values/array.xml
+++ b/Shuzzle/app/src/main/res/values/array.xml
@@ -41,4 +41,19 @@
         <item>Breadit</item>
         <item>smoking</item>
     </string-array>
+    <string-array name="Category_Nsfw">
+        <item>GoneWild30Plus</item>
+        <item>MILF</item>
+        <item>realgirls</item>
+        <item>petitegonewild</item>
+        <item>gonewildcurvy</item>
+        <item>gonewildsmiles</item>
+        <item>lesbians</item>
+        <item>girlsinlove</item>
+        <item>girlskissing</item>
+        <item>BustyPetite</item>
+        <item>LegalTeens</item>
+        <item>adorableporn</item>
+        <item>AsiansGoneWild</item>
+    </string-array>
 </resources>
