--- a/Shuzzle/app/src/main/res/layout/activity_main.xml
+++ b/Shuzzle/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:scaleType="centerInside"
-                android:src="@drawable/sample_pic"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -109,7 +108,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:gravity="center"
-                android:text="r/space"
                 android:padding="20dp"
                 android:textColor="@android:color/white"
                 android:textSize="12sp"
@@ -132,6 +130,17 @@
 
     </com.google.android.material.card.MaterialCardView>
 
+    <androidx.core.widget.ContentLoadingProgressBar
+        android:id="@+id/main_progressbar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline1" />
+
+
     <LinearLayout
         android:id="@+id/main_filter_layout"
         android:layout_width="0dp"
@@ -139,7 +148,7 @@
         android:background="@android:color/white"
         android:clickable="true"
         android:orientation="vertical"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/custom_tool_bar">
